name:                HsBooru
version:             2.0.0.0
synopsis:            booru scraper based on xapian
license:             GPL-3
license-file:        LICENSE
author:              Niklas Haas
maintainer:          cabal@haasn.xyz
copyright:           (c) 2016-2017, Niklas Haas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:

    Scraper for *booru websites based on xapian. Currently only supports
    gelbooru, but it would be very easy to extend. Note: Depends on patched
    versions of the bitrotten Xapian-Haskell bindings.

executable hsbooru
  main-is:             HsBooru.hs

  ghc-options:         -O2 -threaded -rtsopts -dynamic

  other-extensions:    TemplateHaskell
                     , RecordWildCards
                     , PatternSynonyms
                     , ViewPatterns
                     , LambdaCase
                     , TypeFamilies
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , ScopedTypeVariables
                     , OverloadedStrings

  build-depends:       base >=4.9 && <4.10
                     , async >=2.1 && <2.2
                     , transformers >=0.5 && <0.6
                     , mtl >=2.2 && <2.3
                     , data-default >=0.7 && <0.8
                     , time >=1.6 && <1.7
                     , safecopy >=0.9 && <0.10
                     , split >=0.2 && <0.3
                     , acid-state >=0.14 && <0.15
                     , utf8-string >=1.0 && <1.1
                     , bytestring >=0.10 && <0.11
                     , intset >=0.1 && <0.2
                     , containers >=0.5 && <0.6
                     , text >=1.2 && <1.3
                     , http-client >=0.5 && <0.6
                     , http-client-tls >=0.3 && <0.4
                     , http-types >=0.9 && <0.10
                     , Xapian-Haskell >=0.0 && <0.1
                     , directory >=1.3 && <1.4
                     , filepath >=1.4 && <1.5
                     , scalpel-core >=0.5 && <0.6

  default-language:    Haskell2010
