name:                hsbooru
version:             2.2.0.0
synopsis:            booru scraper based on xapian
license:             GPL-3
license-file:        LICENSE
author:              Niklas Haas
maintainer:          cabal@haasn.xyz
copyright:           (c) 2016-2017, Niklas Haas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:

    Scraper for *booru websites based on xapian. Currently only supports
    gelbooru, but it would be very easy to extend.

executable hsbooru
  main-is:             Main.hs
  other-modules:       HsBooru.Conf
                     , HsBooru.Scraper
                     , HsBooru.Sites
                     , HsBooru.Types
                     , HsBooru.Util
                     , HsBooru.Xapian
                     , HsBooru.Xapian.FFI

  c-sources:           HsBooru/Xapian/cbits.cc
  cc-options:          -Wall -fPIC
  extra-libraries:     xapian, stdc++

  ghc-options:         -O2 -threaded -rtsopts -dynamic

  default-extensions:  RecordWildCards
                     , LambdaCase

  other-extensions:    TemplateHaskell
                     , TypeFamilies
                     , FlexibleInstances
                     , OverloadedStrings
                     , ForeignFunctionInterface
                     , GeneralizedNewtypeDeriving

  build-depends:       base >=4.8
                     , async >=2.1
                     , transformers >=0.4
                     , mtl >=2.2
                     , data-default >=0.7
                     , time >=1.5
                     , safecopy >=0.9
                     , split >=0.2
                     , acid-state >=0.14
                     , utf8-string >=1.0
                     , bytestring >=0.9
                     , intset >=0.1
                     , containers >=0.4
                     , text >=1.2
                     , http-client >=0.5
                     , http-client-tls >=0.3
                     , http-types >=0.9
                     , directory >=1.2
                     , filepath >=1.4
                     , scalpel-core >=0.5
                     , optparse-applicative >=0.13

  default-language:    Haskell2010
